# Project-Vector-DB-00

./: .gitignore  README.md
mongo_db/: README.md  common_utils.py  pyproject.toml  sample.env  serve.sh
mongo_db/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--206741855114020662.wt  collection-0--7595205378749211899.wt  collection-2--206741855114020662.wt  collection-4--206741855114020662.wt  collection-7--206741855114020662.wt  index-1--206741855114020662.wt  index-1--7595205378749211899.wt  index-3--206741855114020662.wt  index-5--206741855114020662.wt  index-6--206741855114020662.wt  index-8--206741855114020662.wt  index-9--206741855114020662.wt  sizeStorer.wt
mongo_db/data/diagnostic.data/: metrics.2024-10-07T11-29-58Z-00000  metrics.2024-10-07T11-30-01Z-00000  metrics.2024-10-08T06-46-14Z-00000  metrics.2024-10-08T07-45-15Z-00000  metrics.2024-10-08T10-37-18Z-00000  metrics.2024-10-08T11-02-18Z-00000  metrics.2024-10-08T11-07-42Z-00000  metrics.2024-10-08T11-35-01Z-00000  metrics.2024-10-08T11-49-09Z-00000  metrics.2024-10-08T11-50-19Z-00000  metrics.2024-10-08T11-52-17Z-00000  metrics.2024-10-08T11-57-27Z-00000  metrics.2024-10-08T15-07-54Z-00000  metrics.interim
mongo_db/llm/service/: llm_service.py
mongo_db/main/: asgi.py
mongo_db/main/settings/: dev.py  prod.py  settings.py
mongo_db/memory/: __init__.py  apps.py  memory_schema.py
weaviate_db/: .dockerignore  .flake8  README.md  docker-compose.yml  pyproject.toml  sample.env
weaviate_db/main/: main_schema.py  urls.py
weaviate_db/memory/: apps.py  memory_schema.py
(+31 files in other folders)
